# stream-vbyte-rust

./: Cargo.toml  README.md  RELEASE-NOTES.md  bitbucket-pipelines.yml  rustfmt.toml
.cargo/: config.toml
.github/workflows/: ci.yml
benches/: benchmarks.rs
examples/: cli.rs  generate_decode_table.rs
src/: aarch64.rs  lib.rs  random_varint.rs  scalar.rs  tables.rs  tests.rs  x86.rs
src/decode/: cursor.rs  mod.rs  neon.rs  ssse3.rs  tests.rs
src/encode/: mod.rs  neon.rs  sse41.rs
tests/: cursor.rs  tests.rs
